--- a/styles/sass/_navigation.scss
+++ b/styles/sass/_navigation.scss
@@ -114,7 +114,7 @@
         position:absolute;
         top:100px;
         left:0;
-        height: 100%;
+        height: 500px;
         width:100%;
         transform: skewY(-7deg);
         background: white;
